# darkbot

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  Setup  VERSION  config.status  configure  configure.ac  configure.lineno  darkbot  todo  todo-list.txt
autom4te.cache/: output.0  requests  traces.0
dat/: permbans.db  quiz.db  random.ini  randomstuff.ini  seen.db  servers.ini  setup.ini  userlist.db
dat/rdb/: dunno.rdb  whut.rdb
docs/: README_UTILS  TODO  WHATSNEW  contributors.txt
scripts/: AddServer  AddUser  check-integrity  convertdb  dbcron  download-databases  kill.darkbot  live-update  restart.darkbot
source/: Makefile  Makefile.am  Makefile.in  chan.c  chansrv.c  comm.c  config.h  config.h.in  convertdb.c  darkbot  defines.h  general.c  helpers.c  main.c  parse.c  permbans.c  prototypes.h  quiz.c  random.c  raw.c  reserved.c  seen.c  server.c  signals.c  sockets.c  stats.c  topics.c  url.c  users.c  vars.c  vars.h  web.c
source/.deps/: chan.Po  chansrv.Po  comm.Po  general.Po  helpers.Po  main.Po  parse.Po  permbans.Po  quiz.Po  random.Po  raw.Po  reserved.Po  seen.Po  server.Po  signals.Po  sockets.Po  stats.Po  topics.Po  url.Po  url.Tpo  users.Po  vars.Po  web.Po
source/.deps/CVS/: Entries  Repository  Root
source/langs/: arabic.h  chinese.h  dutch.h  ebonics.h  english.h  french.h  german.h  greek.h  italian.h  lang.h  latin.h  latin2.h  norwegian.h  portuguese.h  romanian.h  russian.h  russian2.h  spanish.h  swedish.h  taiwanish.h
